data/derived/sp14/progs/unify/prog2425.ml.out
Characters 48-58:
  let fixpoint (f,b) = wwhile ((if b = (f b) then (b, false) else (f b, true)),b);;
                                                  ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
